change form-section layout

--- a/front-end/pages/distribusi-produk/index.html
+++ b/front-end/pages/distribusi-produk/index.html
@@ -37,44 +37,48 @@
             <div class="form">
                 <div class="form-content">
                     <div class="form-input">
-                        <p>Hari/Tanggal</p>
-                        <input type="date">
+                        <input type="date" placeholder="Hari/Tanggal">
+                        <select>
+                            <option>Opsi Pengiriman</option>
+                            <option>Diantar</option>
+                            <option>Ambil Ditempat</option>
+                            <option>Jasa Pengiriman Barang</option>
+                        </select>
                     </div>
                     <div class="form-input">
-                        <p>Nama Pemesan</p>
-                        <input type="text">
+                        <input type="text" placeholder="Pemesan">
+                        <input type="text" placeholder="Nama Pengirim">
                     </div>
                     <div class="form-input">
-                        <p>Jenis Produk</p>
-                        <input type="radio">
+                        <select>
+                            <option>Jenis Produk</option>
+                            <option>Seho Sirop</option>
+                            <option>Seho Granule</option>
+                            <option>Seho Block</option>
+                        </select>
+                        <input type="text" placeholder="Keterangan">
                     </div>
                     <div class="form-input">
-                        <p>Kuantitas</p>
-                        <input type="radio">
-                    </div>
-                    <div class="form-input">
-                        <p>Pilihan Pengiriman</p>
-                        <input type="radio">
-                    </div>
-                    <div class="form-input">
-                        <p>Nama Pengirim</p>
-                        <input type="text">
-                    </div>
-                    <div class="form-input">
-                        <p>Keterangan</p>
-                        <input type="text">
-                    </div>
-                    <div class="form-button">
-                        <div class="cancel-button">
-                            <p>batal</p>
-                        </div>
-                        <div class="save-button">
-                            <p>simpan</p>
+                        <select>
+                            <option>Kuantitas</option>
+                            <option>10</option>
+                            <option>20</option>
+                            <option>50</option>
+                        </select>
+                        <div class="form-button">
+                            <div class="cancel-button">
+                                <p>batal</p>
+                            </div>
+                            <div class="save-button">
+                                <p>simpan</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="img-product"></div>
+            <div class="img-product">
+                <div class="img"></div>
+            </div>
         </div>
     </main>
 </body>
