--- a/front-end/pages/dashboard/index.html
+++ b/front-end/pages/dashboard/index.html
@@ -8,15 +8,32 @@
 </head>
 <body>
     <header>
-        <div class="logo-sehub">
-            <h2>SEHUB+</h2>
-        </div>
         <div class="logo-larbre">
             <h2>Selamat Datang!</h2>
             <h2>L'Arbre Seho</h2>
         </div>
     </header>
     <main>
+        <aside>
+            <div class="logo-sehub">
+                <h2>SEHUB+</h2>
+            </div>
+            <nav>
+                <div class="menu">
+                    <div class="icon"></div>
+                    <p>Menu</p>
+                </div>
+                <div class="navigation">
+                    <p>Beranda</p>
+                    <p>Tambah Data</p>
+                    <p>Riwayat</p>
+                    <p>Pengaturan</p>
+                </div>
+            </nav>
+            <div class="companies-name">
+                <p>PT. Rumah Seho Nusantara</p>
+            </div>
+        </aside>
         <div class="hari-tgl">
             <p>20 September 2025</p>
         </div>
