--- a/front-end/pages/dashboard/index.html
+++ b/front-end/pages/dashboard/index.html
@@ -15,43 +15,95 @@
     </header>
 
     <aside>
-        <nav>
-            <div class="logo-sehub">
-                <img src="../../public/sehub.png" alt="">
+        <div class="aside">
+            <nav>
+                <div class="logo-sehub">
+                    <img src="../../public/sehub.png" alt="">
+                </div>
+                <div class="navigation">
+                    <div class="menu">
+                        <img class="icon" src="../../public/menu-g.png" alt="">
+                        <p>MENU</p>
+                    </div>
+                    <div class="nav">
+                        <img class="icon" src="../../public/home-g.png" alt="">
+                        <a href="">Beranda</a>
+                    </div>
+                    <div class="nav">
+                        <img class="icon" src="../../public/add-g.png" alt="">
+                        <a href="">Tambah Data</a>
+                    </div>
+                    <div class="nav">
+                        <img class="icon" src="../../public/history-g.png" alt="">
+                        <a href="">Riwayat</a>
+                    </div>
+                    <div class="nav">
+                        <img class="icon" src="../../public/gear-g.png" alt="">
+                        <a href="">Pengaturan</a>
+                    </div>
+                </div>
+            </nav>
+            <div class="companies-name">
+                <p>PT. Rumah Seho Nusantara</p>
             </div>
-            <div class="navigation">
-                <div class="menu">
-                    <img class="icon" src="../../public/menu-g.png" alt="">
-                    <p>MENU</p>
-                </div>
-                <div class="nav">
-                    <img class="icon" src="../../public/home-g.png" alt="">
-                    <p>Beranda</p>
-                </div>
-                <div class="nav">
-                    <img class="icon" src="../../public/add-g.png" alt="">
-                    <p>Tambah Data</p>
-                </div>
-                <div class="nav">
-                    <img class="icon" src="../../public/history-g.png" alt="">
-                    <p>Riwayat</p>
-                </div>
-                <div class="nav">
-                    <img class="icon" src="../../public/gear-g.png" alt="">
-                    <p>Pengaturan</p>
-                </div>
-            </div>
-        </nav>
-        <div class="companies-name">
-            <p>PT. Rumah Seho Nusantara</p>
         </div>
     </aside>
 
     <main>
-        <div class="hari-tgl">
-            <p>20 September 2025</p>
-        </div>
-        <div class="main-section">
+        <div class="mainn">
+            <div class="hari-tgl">
+                <p>20 September 2025</p>
+            </div>
+            <div class="main-section">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>No</th>
+                            <th>Kode Barang</th>
+                            <th>Nama Produk</th>
+                            <th>Stok Sekarang</th>
+                            <th>Jumlah Terjual</th>
+                            <th>Pembaruan Terakhir</th>
+                            <th>Aksi</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>LS-001</td>
+                            <td>Seho Granule</td>
+                            <td>10</td>
+                            <td>Penyimpanan 1</td>
+                            <td>Penyimpanan 1</td>
+                            <td>
+                                <a href="">lihat detail</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>LS-001</td>
+                            <td>Seho Granule</td>
+                            <td>10</td>
+                            <td>Penyimpanan 1</td>
+                            <td>Penyimpanan 1</td>
+                            <td>
+                                <a href="">lihat detail</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>LS-001</td>
+                            <td>Seho Granule</td>
+                            <td>10</td>
+                            <td>Penyimpanan 1</td>
+                            <td>Penyimpanan 1</td>
+                            <td>
+                                <a href="">lihat detail</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </main>
 </body>
