--- a/front-end/pages/distribusi-produk/index.html
+++ b/front-end/pages/distribusi-produk/index.html
@@ -8,76 +8,54 @@
 </head>
 <body>
     <header>
-        <div class="logo-sehub">
-            <h2>SEHUB+</h2>
-        </div>
         <div class="logo-larbre">
-            <h2>L'Arbre Seho</h2>
+            <h2>Tambah Data Distribusi Produk</h2>
+            <img src="../../public/logo-larbreseho.png" alt="">
         </div>
     </header>
-    <main>
-        <div class="task-bar">
-            <div class="page">
-                <div class="icon"></div>
-                <div class="title">
-                    <p>DISTRIBUSI</p>
+
+    <aside>
+        <div class="aside">
+            <nav>
+                <div class="logo-sehub">
+                    <img src="../../public/sehub.png" alt="">
                 </div>
-            </div>
-            <div class="nav-tgl">
                 <div class="navigation">
-                    <p>Tambah Data</p>
-                    <p>Penyimpanan</p>
+                    <div class="menu">
+                        <img class="icon" src="../../public/menu-g.png" alt="">
+                        <p>MENU</p>
+                    </div>
+                    <div class="nav">
+                        <img class="icon" src="../../public/home-g.png" alt="">
+                        <a href="">Beranda</a>
+                    </div>
+                    <div class="nav">
+                        <img class="icon" src="../../public/add-g.png" alt="">
+                        <a href="">Tambah Data</a>
+                    </div>
+                    <div class="nav">
+                        <img class="icon" src="../../public/history-g.png" alt="">
+                        <a href="">Riwayat</a>
+                    </div>
+                    <div class="nav">
+                        <img class="icon" src="../../public/gear-g.png" alt="">
+                        <a href="">Pengaturan</a>
+                    </div>
                 </div>
-                <div class="hari-tgl">
-                    <p>20 September 2025</p>
-                </div>
+            </nav>
+            <div class="companies-name">
+                <p>PT. Rumah Seho Nusantara</p>
             </div>
         </div>
-        <div class="form-section">
-            <div class="form">
-                <div class="form-content">
-                    <div class="form-input">
-                        <input type="date" placeholder="Hari/Tanggal">
-                        <select>
-                            <option>Opsi Pengiriman</option>
-                            <option>Diantar</option>
-                            <option>Ambil Ditempat</option>
-                            <option>Jasa Pengiriman Barang</option>
-                        </select>
-                    </div>
-                    <div class="form-input">
-                        <input type="text" placeholder="Pemesan">
-                        <input type="text" placeholder="Nama Pengirim">
-                    </div>
-                    <div class="form-input">
-                        <select>
-                            <option>Jenis Produk</option>
-                            <option>Seho Sirop</option>
-                            <option>Seho Granule</option>
-                            <option>Seho Block</option>
-                        </select>
-                        <input type="text" placeholder="Keterangan">
-                    </div>
-                    <div class="form-input">
-                        <select>
-                            <option>Kuantitas</option>
-                            <option>10</option>
-                            <option>20</option>
-                            <option>50</option>
-                        </select>
-                        <div class="form-button">
-                            <div class="cancel-button">
-                                <p>batal</p>
-                            </div>
-                            <div class="save-button">
-                                <p>simpan</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    </aside>
+
+    <main>
+        <div class="mainn">
+            <div class="hari-tgl">
+                <p>20 September 2025</p>
             </div>
-            <div class="img-product">
-                <div class="img"></div>
+            <div class="main-section">
+                <h3>Form Tambah Data Distribusi</h3>
             </div>
         </div>
     </main>
